--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item mx-3"><a class="nav-link" href="#seccion_1">Nosotros</a></li>
                 <li class="nav-item mx-3"><a class="nav-link" href="#seccion_2">Especialidades</a></li>
-                <li class="nav-item mx-3"><a class="nav-link" href="vista2.html#vista2">Servicios</a></li>
+                <li class="nav-item mx-3"><a class="nav-link" href="#">Servicios</a></li>
                 <li class="nav-item mx-3"><a class="nav-link" href="#seccion_4">Contáctanos</a></li>
             </ul>
         </div>
@@ -56,7 +56,7 @@
             <h1 style="font-size: 3.5rem; font-weight: bold;">Tu salud ahora en tus manos</h1>
             <p style="font-size: 1.5rem;">Al alcance de un clic</p>
             <a href="#" class="btn btn-outline-warning btn-lg me-3 mt-4">Conoce más</a>
-            <a href="#" class="btn btn-warning btn-lg mt-4">Reserva tu cita</a>
+            <a href="registro.html" class="btn btn-warning btn-lg mt-4">Reserva tu cita</a>
         </div>
     </section>
 
@@ -93,7 +93,7 @@
 
 
     <!-- Especialistas -->
-    <section class="py-5" id="seccion_1">
+    <section class="py-5" id="seccion_2">
         <div class="container">
             <div class="row align-items-center">
     
