modificación popup de registro a enlace de ventana login

--- a/homeAdmin.html
+++ b/homeAdmin.html
@@ -38,7 +38,7 @@
                     <h5 class="card-title">Gestión Citas</h5>
                     <p class="card-text">
                         Último cambio: <strong>28 de diciembre, 2023</strong><br>
-                        Products name, Products name, Products name...
+                        Agendamiento Medico General, 14-Oct-2024, recuerde llegar 20min anticipado...
                     </p>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                     <h5 class="card-title">Historia Clinica</h5>
                     <p class="card-text">
                         Último cambio: <strong>28 de diciembre, 2023</strong><br>
-                        Provider name, 98767909, name@home.com...
+                        Última descarga realizada por 98767909, name@home.com...
                     </p>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                     <h5 class="card-title">Desgargue su resultado</h5>
                     <p class="card-text">
                         Último cambio: <strong>28 de diciembre, 2023</strong><br>
-                        Report name, fecha de informe...
+                        RSM Resonancia Magnetica, fecha de informe...
                     </p>
                 </div>
             </div>
