--- a/home.html
+++ b/home.html
@@ -40,12 +40,15 @@
         </div>
 
         <!-- Íconos a la derecha -->
-        <div class="d-flex ms-auto"></div>
-        <a href="#" class="nav-link mx-3"><i class="bi bi-heart"></i></a>
-        <a href="registro.html" class="nav-link mx-3" data-bs-toggle="modal" data-bs-target="#loginModal"><i
-                class="bi bi-person"></i></a>
+        <div class="d-flex ms-auto">
+            <a href="#" class="nav-link mx-3"><i class="bi bi-heart"></i></a>
+            
+            <!-- Cambié el enlace para que redirija a registro.html en lugar de abrir un modal -->
+            <a href="login.html" class="nav-link mx-3">
+                <i class="bi bi-person"></i>
+            </a>
         </div>
-        </div>
+        
     </nav>
 
     <!-- Hero Section ajustado -->
@@ -296,7 +299,7 @@
     </footer>
 
     <!-- Modal de Inicio de Sesión -->
-    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -323,7 +326,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="home.js"></script>
