Modificaciones al navar, enlaces a zona de registro y administracion de usuarios, getión de pacientes y citas

--- a/home.html
+++ b/home.html
@@ -34,17 +34,18 @@
             <ul class="navbar-nav">
                 <li class="nav-item mx-3"><a class="nav-link" href="#seccion_1">Nosotros</a></li>
                 <li class="nav-item mx-3"><a class="nav-link" href="#seccion_2">Especialidades</a></li>
-                <li class="nav-item mx-3"><a class="nav-link" href="#">Servicios</a></li>
+                <li class="nav-item mx-3"><a class="nav-link" href="homeAdmin.html">Servicios</a></li>
                 <li class="nav-item mx-3"><a class="nav-link" href="#seccion_4">Contáctanos</a></li>
             </ul>
         </div>
 
         <!-- Íconos a la derecha -->
         <div class="d-flex ms-auto">
-            <a href="#" class="nav-link mx-3"><i class="bi bi-heart"></i></a>
-            
-            <!-- Cambié el enlace para que redirija a registro.html en lugar de abrir un modal -->
-            <a href="login.html" class="nav-link mx-3">
+            <a href="login.html" class="nav-link mx-3" title="Registrate Aquí">
+                <i class="bi bi-heart-pulse"></i>
+            </a>
+        
+            <a href="registro.html" class="nav-link mx-3" title="Usuario">
                 <i class="bi bi-person"></i>
             </a>
         </div>
