--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
             <!-- Logo a la izquierda -->
-            <a class="navbar-brand mx-5" href="#">Medical Service</a>
+            <a class="navbar-brand mx-5" href="home.html">Medical Service</a>
 
             <!-- Botón de hamburguesa (para móviles) -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
